[gd_scene load_steps=3 format=3 uid="uid://c467tawptvo4i"]

[ext_resource type="Script" path="res://addons/pillz_table_editor/scripts/main_panel.gd" id="1_abcde"]

[sub_resource type="Theme" id="Theme_lhrrk"]

[node name="MainPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_abcde")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_direction = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 74.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_lhrrk")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="EnemyList" type="ItemList" parent="VBoxContainer"]
clip_contents = false
layout_direction = 1
layout_mode = 2
size_flags_vertical = 4
auto_height = true
text_overrun_behavior = 0
item_count = 4
fixed_icon_size = Vector2i(24, 24)
item_0/text = "IMP Dummy"
item_1/text = "imp_berserker"
item_2/text = "imp_default"
item_3/text = "imp_tanky"

[node name="PropertyList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
select_mode = 1
max_text_lines = 32

[node name="NewPropertyName" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "New Property Name"

[node name="NewPropertyValue" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "New Property Value"

[node name="AddPropertyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Add Property"
